fixing troubleshooting z-index

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ body.loginBg {
   right: 0;
   z-index: 2;
   margin: auto;
-  width: 100%;
   float: left; }
   .signup-link:hover, .signup-link:focus, .signup-link:visited {
     color: white;
@@ -102,7 +101,7 @@ body.loginBg {
   position: absolute;
   right: 0.95em;
   bottom: 1.6em;
-  z-index: 1;
+  z-index: 3;
   color: white; }
   .login-trouble-signing-link:hover, .login-trouble-signing-link:focus, .login-trouble-signing-link:visited {
     color: white;
