--- a/sass/_login-screen.sass
+++ b/sass/_login-screen.sass
@@ -86,7 +86,7 @@ body.loginBg
     right: 0
     z-index: 2
     margin: auto
-    width: 100%
+    //width: 100% 
     float: left
     
     &:hover, &:focus, &:visited
@@ -100,7 +100,7 @@ body.loginBg
     position: absolute
     right: .95em
     bottom: 1.6em
-    z-index: 1
+    z-index: 3
     color: white
     
     &:hover, &:focus, &:visited
